About 30 words to be removed, got the figure to work

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -127,26 +127,26 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
 \section*{Introduction}
 
-    Representing an ecological community as a network offers a convenient summary of how it is constructed since networks simultaneously describe species composition and interactions between species. A tabulation of the nodes (species) and their relative abundances forms the basis for traditional metrics of community composition such as alpha diversity. A network framework combines this tabulation of nodes with a list of interactions (links between nodes) so that networks provide additional, higher-order information on community structure. Despite this additional information, empirical descriptions of ecological networks are still limited because they are usually considered static representations of the communities they describe. That is, whether the network is assembled based on aggregated data, a single intensive ``snapshot" sample, or expert knowledge, interactions are assumed to occur deterministically wherever and whenever the community is observed~\citep{Olesen2011a}. 
+    Representing an ecological community as a network summarizes both species composition and interactions between species. A tabulation of the nodes (species) and their relative abundances forms the basis for traditional metrics of community composition such as alpha diversity. A network framework combines this tabulation of nodes with a list of interactions (links between nodes) so that networks provide additional, higher-order information on community structure. Despite this additional information, empirical descriptions of ecological networks are usually limited to static representations of the communities they describe. That is, whether the network is assembled based on aggregated data, a single intensive ``snapshot" sample, or expert knowledge, interactions are assumed to occur deterministically wherever and whenever the community is observed~\citep{Olesen2011a}. 
 
 
-    The assumption of static communities contrasts with the known stochasticity of ecological communities~\citep{Gotelli2000}. Community composition and species abundances vary over space~\citep{Baiser2012} and time~\citep{Olesen2011a}. Moreover, interactions vary over space~\citep{Kitching1987,Baiser2012}, time~\citep{Kitching1987,Olesen2011a}, and between individuals~\citep{Pires2011a,Fodrie2015,Novak2015}. Moreover, variability in community composition and interactions may or may not be closely related. The removal of a species from a site will obviously also remove its interactions but, conversely, the co-occurrence of potentially interacting species does not guarantee that the species will interact at a given place and time. Interactions can be lost if the interaction partners remain present but are separated in time or are too rare to detect each other~\citep{Tylianakis2010}. Interactions can also fail to occur because of environmental contingencies~\citep{Poisot2015}, or through changes to individual preferences~\citep{Fodrie2015}. 
+    The assumption of static communities contrasts with the known stochasticity of ecological communities~\citep{Gotelli2000}. Community composition and abundances vary over space~\citep{Baiser2012} and time~\citep{Olesen2011a}. Moreover, interactions vary over space~\citep{Kitching1987,Baiser2012}, time~\citep{Kitching1987,Olesen2011a}, and between individuals~\citep{Pires2011a,Fodrie2015,Novak2015}. Worse, variability in community composition and interactions may not be closely related. The removal of a species from a site will obviously also remove its interactions but, conversely, the co-occurrence of potentially interacting species does not guarantee that the species will interact at a given place and time. Interactions can be lost if the interaction partners remain present but are separated in time or are too rare to detect each other~\citep{Tylianakis2010}. Interactions can also fail to occur because of environmental contingencies~\citep{Poisot2015}, or because of individual preferences~\citep{Fodrie2015}. 
 
 
-    Beyond ``true" variation in network structure, several researchers have noted the effects of sampling intensity on network structure (e.g.,~\citealp{Martinez1999,Bluthgen2006,Bluthgen2007}). An assessment of the accumulation of interactions with increasing sampling effort suggests that it is even more challenging to document interactions than species~\citep{Poisot2012}. As a result, it has been proposed that interactions should be described probabilistically and network metrics computed accordingly~\citep{Poisot2016}. Early work in this vein includes food-web models using likelihood-based approaches~\citep{Allesina2008} or Gaussian~\citep{Williams2010} or binomial~\citep{Rohr2016} probability functions for each possible interaction. These models may include information about species' traits~\citep{Rohr2016} or attempt to reproduce empirical network structures using a set of simple rules~\citep{Allesina2008,Williams2010}.
+    Beyond ``true" variation in network structure, several researchers have noted the effects of sampling intensity (e.g.,~\citealp{Martinez1999,Bluthgen2006,Bluthgen2007}). An assessment of the accumulation of interactions with increasing sampling effort suggests that it is even more challenging to document interactions than species~\citep{Poisot2012}. As a result, it has been proposed that interactions should be described probabilistically and network metrics computed accordingly~\citep{Poisot2016}. Early work in this vein includes food-web models using likelihood-based approaches~\citep{Allesina2008} or Gaussian~\citep{Williams2010} or binomial~\citep{Rohr2016} probability functions for each possible interaction. These models may include information about species' traits~\citep{Rohr2016} or attempt to reproduce empirical network structures using a set of simple rules~\citep{Allesina2008,Williams2010}.
 
 
-    Despite these preliminary efforts, we currently lack the quantitative methodology to deal with the uncertainty generated by spatiotemporal variation in ecological interactions and by sampling. Even in extremely well-sampled networks, uneven sampling across species can lead to the erroneous inference that some species do not interact because they co-occur rarely or have not yet been observed together - even if they do interact when they do co-occur (see Fig.~\ref{histograms} for an example). Nearly all network studies will thus neglect some interactions, necessitating an approach that acknowledges this uncertainty.
+    Despite these efforts, we currently lack the quantitative methodology to deal with uncertainty generated by spatiotemporal variation in ecological interactions and by limited sampling. Even in extremely well-sampled networks, uneven sampling across species can lead to the inference that some species do not interact because they co-occur rarely or have not yet been observed together - even if they do interact when they do co-occur (see Fig.~\ref{histograms}). Nearly all network studies will thus neglect some interactions, necessitating an approach that acknowledges this uncertainty.
 
 
-    In this study, we formalise the description of interactions between species as probabilities and develop analytical tools to capture the uncertainty in the estimation of these interactions. We focus on binary interactions as a first step, but the framework could later be expanded to deal with interaction frequencies and strength. To define the problem, we will first identify the different contributions to the uncertainty of an interaction and discuss the implications of each source of uncertainty for the properties of ecological networks. 
+    In this study, we formalise the description of interactions between species as probabilities and develop analytical tools to capture the uncertainty in the estimation of these interactions. We focus on binary interactions as a first step, but the framework could be expanded to deal with interaction frequencies or strengths. To define the problem, we first identify different contributions to the uncertainty of an interaction and discuss the implications of each source of uncertainty for the properties of ecological networks. 
     % Next, we develop an analytical framework to quantify the uncertainty around interactions in an empirical web and, finally, illustrate this framework using an extensively sampled empirical network.
     % We illustrate this framework using the most extensively sampled network to date (Box 1).  Finally, we offer tangible recommendations for improved descriptors of ecological interactions. Through these efforts, we demonstrate both the utility of our approach and the importance of acknowledging the uncertainty inherent in network studies.
 
 
     \subsection*{Why do some interactions \emph{not} occur?}
 
-      We will start from the perspective of an empirical community ecologist faced with the task of describing a previously unknown interaction network. This ecologist will be interested in generating a description of the species/nodes present and the links between them~\citep{Roslin2016}.  Importantly, the information sought is conveyed by both the presence and \emph{absence} of links. Presences and absences are not, however, equally certain. An observed link definitely occurred, but there are multiple reasons why a given link may not be observed \emph{whether or not the interaction truly occurred}. The detection of any interaction is a stochastic process. We define three nested levels of uncertainty contributing to this stochasticity: interaction uncertainty, process uncertainty, and detection uncertainty (Fig.~\ref{concept_fig}).
+      We start from the perspective of a community ecologist faced with the task of describing a previously unknown interaction network. This ecologist will be interested in generating a description of the species/nodes present and the links between them~\citep{Roslin2016}.  Importantly, the information sought is conveyed by both the presence and \emph{absence} of links. Presences and absences are not, however, equally certain. An observed link definitely occurred, but there are multiple reasons why a given link may not be observed \emph{whether or not the interaction truly occurred}. The detection of any interaction is a stochastic process. We define three nested levels of uncertainty contributing to this stochasticity: interaction uncertainty, process uncertainty, and detection uncertainty (Fig.~\ref{concept_fig}).
 
 
         \subsubsection*{Interaction uncertainty} 
@@ -154,39 +154,39 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
           First, and most fundamentally, a pair of species may or may not have the appropriate characteristics (or traits) to interact. We define the probability of an interaction $L$ given characteristics $\mathbf{T}$ as $P(L | \mathbf{T})=\lambda$. Some species pairs, such as a salmon and a saguaro cactus, have incompatible traits and would never interact even if they should co-occur. In such cases, $\lambda = 0$ and there is no uncertainty. 
 
 
-          Most species pairs, however, do not have traits that absolutely prevent an interaction. This means that it is generally unclear whether an unobserved interaction is impossible or simply a rare phenomenon with $\lambda>0$. This uncertainty is partly addressed by trait-matching models in which species with better-matched traits are more likely to interact~\citep{Bartomeus2016}. As these models improve and include better information about the influence of traits on interactions, the uncertainty will be reduced and $\lambda$ should either tend to 0 or to 1. Nevertheless, every model is imperfect and lacks information that could be used to define constraints on interactions~\citep{Dormann2017}. Some interaction uncertainty will remain even using a very good trait-matching model.
+          Most species pairs, however, do not have traits that absolutely prevent an interaction. This means that it is generally unclear whether an unobserved interaction is impossible or simply a rare phenomenon with $\lambda>0$. This uncertainty is partly addressed by trait-matching models in which species with better-matched traits are more likely to interact~\citep{Bartomeus2016}. As these models improve and include better information about the influence of traits on interactions, the uncertainty will be reduced and $\lambda$ should either tend to 0 or to 1. Nevertheless, every model is imperfect and lacks information that could be used to define constraints on interactions~\citep{Dormann2017}. Some interaction uncertainty is therefore inevitable.
 
 
         \subsubsection*{Process uncertainty} 
 
-         Even when an interaction is feasible, i.e. $L=1$, it may still not occur at a given location or moment in time because of local constraints such as inclement weather or unsuitable habitat. We define the local realisation of an interaction, $X$, given that the interaction is feasible, as a stochastic process with associated probability $P(X|L=1)=\chi$. This phenomenon of interaction contingencies is usually not considered in network studies, but there is a rich literature in community ecology describing the contingencies of interactions. Phenological matching~\citep{MillerRushing2010,Gezon2016}, species preferences~\citep{Pires2011,Novak2015,Coux2016}, and fear effects of other species~\citep{Luttbeg2005,Wirsing2008} are just some of the factors contributing to variation in the frequency of interactions between a given pair of species. Some of the factors leading to process uncertainty can be addressed in mesocosm studies of networks (e.g., environmental conditions can be held stable) or could be included in models along the line of trait-matching models (e.g., phenological matching). In the field, however, process uncertainty is likely inevitable.
+         Even a feasible interaction, i.e. $L=1$, still may not occur at a given location or moment in time because of local constraints such as inclement weather or unsuitable habitat. We define the local realisation of an interaction, $X$, given that the interaction is feasible, as a stochastic process with associated probability $P(X|L=1)=\chi$. This phenomenon of interaction contingencies is usually not considered in network studies, but there is a rich literature in community ecology  on the topic. Phenological matching~\citep{MillerRushing2010,Gezon2016}, species preferences~\citep{Pires2011,Novak2015,Coux2016}, and fear effects~\citep{Luttbeg2005,Wirsing2008} are just some of the factors contributing to variation in the frequency of interactions between a given pair of species. Some of these factors can be addressed in mesocosm studies of networks (e.g., environmental conditions can be held stable) or could be included in models along the line of trait-matching models (e.g., phenological matching). In the field, however, process uncertainty is likely inevitable.
 
 
-         One proposed solution to the problem of process uncertainty is to use repeated sampling of networks. For example,~\citet{Weinstein2017} used repeated sampling rounds to estimate the daily probability of detecting an interaction and thereby model detection and process uncertainty. While conceptually attractive, this approach is unsuitable for interactions occurring over longer time scales (e.g., associations between hosts and parasitoids with a single generation per year), or very rare interactions which might not occur on any of the sampling days. Moreover, the faster accumulation of species than interactions means that repeated sampling will tend to introduce more unobserved interactions than observed interactions unless the number of samples is very high~\citep{Poisot2012}.
+         One proposed solution to the problem of process uncertainty is to use repeated sampling of networks. For example,~\citet{Weinstein2017} used repeated sampling to estimate the daily probability of detecting an interaction and thereby model detection and process uncertainty. While conceptually attractive, this approach is unsuitable for interactions occurring over longer time scales (e.g., associations between hosts and parasitoids with a single generation per year), or very rare interactions which might not occur on any of the sampling days. Moreover, the faster accumulation of species than interactions means that repeated sampling will tend to introduce more unobserved interactions than observed interactions unless the number of samples is very high~\citep{Poisot2012}.
 
 
         \subsubsection*{Detection uncertainty} 
 
-          Lastly, measurement errors are a pervasive source of uncertainty in the observation of ecological processes. That is, even if an interaction is feasible and occurs during sampling ($L = 1$ and $X = 1$), we may fail to detect it. We may define the probability of detecting of an interaction, $D$, as a stochastic process with the associated probability $P(D|X=1,L=1)=\delta$. Detection failure could happen for many reasons (see~\citet{Wirta2014} for examples and partial solutions to them). Some sources of detection error can be minimised with appropriate sampling effort ($\delta$ will approach one with increasing number of samples), but other sources are often difficult to reduce (e.g. the occurrence of cryptic species might require molecular analysis for appropriate taxonomic identification as in~\citealt{Wirta2014,Frost2016}). The impossibility of eliminating detection uncertainty also limits the usefulness of repeated sampling; the absence of an interaction on a given day could either be because it was not feasible [$P(L) = 0$], was feasible but did not occur because of local conditions during sampling ($P(X|L=1) = 0$], or was feasible and occurred during sampling but could not be observed [$P(D|X=1,L=1)=0$]. From a conceptual perspective, repeated sampling therefore fails to satisfactorily address the uncertainty inherent in empirical networks.
+          Lastly, measurement errors are a pervasive source of uncertainty in the observation of ecological processes. Even if an interaction is feasible and occurs during sampling ($L = 1$ and $X = 1$), we may still fail to detect it. We may define the probability of detecting of an interaction, $D$, given the interaction is feasible and occurs, as a stochastic process with the associated probability $P(D|X=1,L=1)=\delta$. Detection failure could happen for many reasons (see~\citet{Wirta2014} for examples and partial solutions to them). Some sources of detection error can be minimised with appropriate sampling effort ($\delta$ will approach one with increasing number of samples), but other sources are often difficult to reduce (e.g. the occurrence of cryptic species might require molecular analysis for appropriate taxonomic identification as in~\citealt{Wirta2014,Frost2016}). The absence of an interaction on a given day could therefore be because it was not feasible [$P(L) = 0$], was feasible but did not occur because of local conditions during sampling ($P(X|L=1) = 0$], or was feasible and occurred during sampling but could not be observed [$P(D|X=1,L=1)=0$]. Because we cannot separate these possibilities, repeated sampling fails to satisfactorily address the uncertainty inherent in empirical networks.
 
 
     \subsection*{Estimating detection and process uncertainty}
 
-        An observed interaction indicates that an interaction was feasible, occurred during sampling, and was detectable. That is, $L = 1$, $X = 1$, and $D = 1$. An unobserved interaction could be due to any of the three sources of uncertainty ($D$, $X$, and/or $L = 0$). Only the case where $L = 0$ is a true absence of interaction --the usual interpretation of a $0$ value in an interaction matrix. It is particularly important to rule out the situations where $D=0 \cup X = 1 \cup L=1$, i.e. where the interaction occurred at the location but was not observed, and $X = 0 \cup L =1$, i.e., where the interaction is feasible but did not occur at the local site (Fig.~\ref{conceptual_fig}). 
+        An observed interaction indicates that an interaction was feasible, occurred during sampling, and was detectable ($L = 1$, $X = 1$, and $D = 1$). An unobserved interaction could be due to any of the three sources of uncertainty ($D$, $X$, and/or $L = 0$). Only the case where $L = 0$ is an interaction that never occurs --the usual interpretation of a $0$ value in an interaction matrix. It is particularly important to rule out the situations where $D=0 \cup X = 1 \cup L=1$, i.e. where the interaction occurred at the location but was not observed, and $X = 0 \cup L =1$, i.e., where the interaction is feasible but did not occur at the local site (Fig.~\ref{conceptual_fig}). 
         % The occurrence of a true absence, our quantity of interest, corresponds to the joint event $L=0 \cup X=1 \cup D=1$ but %% AC: Doesn't a true absence just mean $L=0$ regardless of our ability to detect/local conditions? 
-        Using empirical data, however, it is impossible to identify the cause of an unobserved interaction. An empirical ecologist will measure the marginal probability $P(L) = k/n$, where $k$ is the number of observed interactions and $n$ the number of observed co-occurrences. Given this information, the question becomes: how can we reduce the uncertainty around our estimated interaction probability?
+        This is not possible, however, using empirical data. An empirical ecologist will instead measure the marginal probability $P(L) = k/n$, where $k$ is the number of observed interactions and $n$ the number of observed co-occurrences. Given this information, the question becomes: how can we reduce the uncertainty around our estimated interaction probability?
 
 
         % The considerations above raise major challenges: when faced with empirical data, how may we infer whether unobserved interactions truly do not occur? How may we refine our sampling approaches to reduce uncertainties and gain insights into the impact of multiple processes on field observations? Importantly, some sources of uncertainty within these three broad groupings can be minimised with appropriate sampling (e.g., sampling in a variety of weather conditions, combining different methods of detection) while other sources are difficult or impossible to reduce since they are generated by the process in which we are interested (e.g., variation in individual preferences or traits). Given this multifaceted problem of uncertainty, what can we do to separate the different types of variation and reduce those that can be reduced?
 
 
-        When attempting to reduce uncertainty, the obvious rule of thumb is ``sample more". Increasing sample sizes will reduce uncertainty about the upper bound of the interaction probability and will also increase the probability of detecting unlikely or cryptic interactions (e.g., interactions where $L$=1 but process or detection uncertainty is high). Despite these benefits, we note that there are limits to the utility of increased sampling. Since the probability of observing the co-occurrence of two species will always be higher than the probability of observing their interaction (since the probability of interaction is conditional on both interaction partners being present), we will accumulate observations of co-occurrences faster than we will accumulate observations of interactions (Fig.~\ref{histograms}C). Thus, the more we sample, the more zeros will appear in our interaction matrix.
+        The obvious rule of thumb to reduce uncertainty is ``sample more". Increasing sample sizes will reduce uncertainty about the upper bound of the interaction probability and will also increase the probability of detecting unlikely or cryptic interactions (e.g., interactions where $L$=1 but process or detection uncertainty is high). Despite these benefits, we note that there are limits to the utility of increased sampling. Since the probability of observing the co-occurrence of two species will always be higher than the probability of observing their interaction (since the probability of interaction is conditional on both interaction partners being present), we will accumulate observations of co-occurrences faster than we will accumulate observations of interactions (Fig.~\ref{histograms}C). Thus, the more we sample, the more zeros will appear in our interaction matrix.
 
 
         An added complication is that increased sampling will not reduce uncertainty evenly across interactions. To record an interaction between A and B, we need to identify both partners correctly (a non-trivial problem in many food webs; e.g.~\citealp{Kaartinen2011,Roslin2016}). For both molecular and rearing techniques, certain types of interactions may go unnoticed due to technical challenges~\citep{Wirta2014}. This can bias the set of recorded interactions towards those that are easier to observe.
 
 
-        Most importantly, if two species are never observed co-occurring during several days of sampling then repeated sampling reveals nothing about their probability of interacting if they should ever co-occur. Intensive sampling is, therefore, an important step towards reducing uncertainty in ecological networks but is unlikely to be enough in most cases. To supplement repeated and intensive sampling efforts and reduce uncertainty around unobserved interactions, we suggest researchers use prior knowledge of the same or similar systems. Here, we outline a Bayesian approach to combining repeated sampling and prior knowledge to obtain probabilistic networks. We then demonstrate how to construct such a probabilistic network using an intensively and repeatedly sampled empirical dataset. Finally, we show how a probabilistic understanding of a network allows us to establish confidence intervals around measures of network structure.
+        Most importantly, if two species are never observed co-occurring during several days of sampling then repeated sampling reveals nothing about their probability of interacting if they should ever co-occur. Intensive sampling is, therefore, an important step towards reducing uncertainty in ecological networks but is unlikely to be enough in most cases. To supplement repeated sampling efforts and reduce uncertainty around unobserved interactions, we suggest researchers use prior knowledge of the same or similar systems. Here, we outline a Bayesian approach to combining repeated sampling and prior knowledge in probabilistic networks. We then demonstrate how to construct such a probabilistic network using an intensively and repeatedly sampled empirical dataset. Finally, we show how a probabilistic understanding of a network allows us to establish confidence intervals around measures of network structure.
 
 
 \section*{Materials and methods}
@@ -332,7 +332,7 @@ All data used in this study have been independently published and are accessible
 
 \captionsetup{singlelinecheck=false, font={stretch=1}}
 
-\section*{Boxes and figures}
+\section*{Figures}
 
 
 % \begin{fullbox}{}
@@ -343,18 +343,19 @@ All data used in this study have been independently published and are accessible
 %   \end{spacing}
 % \end{fullbox}
 
-\clearpage
+% \clearpage
 
   \begin{figure}[h!]
-    \caption{Three nested levels of uncertainty mean that the zeros (unobserved interactions) and ones (observed interactions) in an interaction matrix are not equally certain. A one indicates an interaction that definitely occurred, while a zero could indicate an interaction that never occurs, an interaction that occurs sometimes but did not occur during sampling, or an interaction that occurred but was not detected. If the large rectangle represents the probability space for an interaction, only the shaded areas represent accurate records of the interaction probability.}
+    \caption{Three nested levels of uncertainty mean that an observed interaction matrix is unlikely to capture all of the interactions that can really occur at a site. Beginning with a true interaction matrix (top left) of zeros (interactions that cannot occur, white) and ones (interactions that do occur, black), each level of uncertainty adds more zeros. Interaction uncertainty refers to the fact that some interactions are more likely than others based on species' traits. For example, lions are less likely to predate upon elephants than zebras. If our trait model is incomplete (e.g., if we neglect group hunting in lions), we might assume that elephants are too large to ever be prey for lions. Process uncertainty further reduces the probability of observing an interaction as not every interaction occurs during each sampling period. We show six example interaction matrices representing interactions observed over two days at three sites. The probability of observing an interaction now reflects the rarity of each interaction occurring during a given sampling day. Detection uncertainty reflects the fact that not all interactions are equally detectable. For example, rare species may be hard to find and follow in the field. After applying these three layers of uncertainty, some of the interactions which truly occur are very unlikely to be observed. An observed matrix sampled based on this matrix (lower left) is likely to contain far fewer interactions than the original, true matrix.}
     \label{conceptual_fig}
     \begin{center}
+    \includegraphics*[height=.6\textheight]{figures/conceptual_fig.eps}
     \end{center}
     \end{figure}
 
 
   \begin{figure}[h!]
-      \caption{Despite the high levels of replication in our empirical dataset, most galler-natural enemy pairs were never observed co-occurring, and those that did co-occur were rarely observed interacting. \textbf{A)} Here we show a histogram of the number of pairs of species observed co-occurring at least once; the 9794 galler-enemy pairs that were never observed co-occurring are omitted.
+      \caption{Despite the replication in our empirical dataset, most galler-natural enemy pairs were never observed co-occurring and those that did co-occur rarely interacted. \textbf{A)} Here we show a histogram of the number of pairs of species observed co-occurring at least once. 9794 galler-enemy pairs were never observed co-occurring (not shown).
       \textbf{B)} Here we show a histogram of the number of observed interactions within pairs of co-occurring species. Species which co-occurred but never interacted are included. 
       \textbf{C)} Here we show, for each species pair, the number of observed interactions plotted against the number of observed co-occurrences. The red, dashed line indicates a 1:1 relationship between interactions and co-occurrences.}
       \label{histograms}
@@ -365,7 +366,7 @@ All data used in this study have been independently published and are accessible
 
 
   \begin{figure}[h!]
-    \caption{Imperfect detection of interactions increases the number of samples required to be confident that an interaction does not occur. Assume that two species cannot interact (i.e., $\lambda=0$) and that the number of observed interactions follows a binomial distribution. Here we show the upper bound (solid black line) of a 95\% Cloper-Pearson true credible interval for the interaction probability $\lambda$ for a pair of species that has been observed co-occurring $n$ times but never observed interacting ($k = 0$). Only with 35 observations will the upper limit of the credible interval be lowered to 0.1 (dashed, red line). Thus, adding more observations is useful in controlling uncertainty, but the number of observations added needs to be very high. }
+    \caption{Imperfect detection of interactions increases the number of samples required to be confident that an interaction does not occur. Assume that two species cannot interact (i.e., $\lambda=0$) and that the number of observed interactions follows a binomial distribution. Here we show the upper bound (solid black line) of a 95\% Cloper-Pearson true credible interval for the interaction probability $\lambda$ for a pair of species that has been observed co-occurring $n$ times but never interacting ($k = 0$). The upper limit of the credible interval only reaches 0.1 (dashed, red line) with 35 observations. Thus, adding more observations is useful in controlling uncertainty, but the number of observations added must be very high. }
     \label{upper_limits}
     \begin{center}
     \includegraphics*[width=.8\textwidth]{figures/upper_limit_DG.eps}
@@ -375,7 +376,7 @@ All data used in this study have been independently published and are accessible
 
   \begin{figure}[h!]
     \caption{Using prior distributions based on a single site (Zillis in Graub\"{u}nden, Switzerland) from~\citet{Kopelke2017}, we calculate posterior distributions for the probability of interaction ($\lambda$) between two species that have not yet been observed interacting ($k = 0$). 
-    Posterior distributions for $\lambda$ narrow and approach zero as the number of observed co-occurrences ($n$) increases. Likewise, the maximum likelihood estimator for the mean probability of interaction (diamonds at top of each panel) approaches zero and the 95\% credible interval (lines at top of each panel) narrows as sample size increases.
+    Posterior distributions (curves) and 95\% credible intervals (lines at top of panell) for $\lambda$ narrow and approach zero as the number of observed co-occurrences ($n$) increases. Diamonds indicate the maximum likelihood estimator for the mean probability of interaction.
     Dashed lines indicate threshold probabilities of 0.01, 0.05, and 0.1. The number of samples required to obtain a 95\% credible interval below each threshold increases rapidly. It takes just over 20 observed co-occurrences to be 95\% confident that $\lambda<0.10$, approximately 50 co-occurrences to be 95\% confident that $\lambda<0.05$, and over 100 co-occurrences to be 95\% confident that $\lambda<0.01$.}
     \label{Salix_pdfs_cdfs}
     \begin{center}
@@ -394,7 +395,7 @@ All data used in this study have been independently published and are accessible
 
 
   \begin{figure}[h!]
-    \caption{Mean connectance, links per galler, nestedness (NODF), and links per natural enemy for networks assembled using posterior distributions based on a single site (Zillis in Graub\"{u}nden, Switzerland) from~\citet{Kopelke2017} occupied a narrow range. We created 100 ``posterior-sampling" networks and then, for each of these, created 100 ``detection-filter" networks by randomly sampling 50\%-99\% of the interactions included in the posterior-sampling network. This simulates imperfect detection of interactions in the field. Each point represents the mean (+/- SD) network property (e.g., connectance) obtained from a set of 100 detection-filter networks. The detection-filter networks cover a broader range of network properties than the posterior-sampling networks but the value of each property decreases as the strength of the detection filter increases. Values in the original web are indicated by dashed lines.}
+    \caption{Mean connectance, links per galler, nestedness (NODF), and links per natural enemy for networks assembled using posterior distributions based on a single site (Zillis in Graub\"{u}nden, Switzerland) from~\citet{Kopelke2017} occupied a narrow range. To obtain distributions of network properties, we created 100 ``posterior-sampling" networks and then, for each of these, created 100 ``detection-filter" networks by randomly sampling 50\%-99\% of the interactions included in the posterior-sampling network. This simulates imperfect detection of interactions in the field. Each point represents the mean (+/- SD) network property (e.g., connectance) obtained from a set of 100 detection-filter networks. The detection-filter networks cover a broader range of network properties than the posterior-sampling networks but the value of each property decreases as the strength of the detection filter increases. Values in the original web are indicated by dashed lines.}
     \label{posterior_webs}    
     \begin{center}
     \includegraphics[width=.8\textwidth]{figures/GP_posterior_properties_Zillis.eps}
